--- a/capstone/src/App.css
+++ b/capstone/src/App.css
@@ -34,6 +34,7 @@ nav a:hover {
 
 footer {
   display: flex;
+  background-color: #D9D9D9;
   gap: 100px;
   justify-content: space-evenly;
   padding: 20px;
@@ -96,7 +97,7 @@ footer  a:hover {
 
 .card img {
   position: absolute;
-  top: -80%;
+  top: -55%;
   left: 0;
   border: 1px solid;
   border-top-left-radius: 30px;
