--- a/capstone/src/App.css
+++ b/capstone/src/App.css
@@ -38,7 +38,8 @@ footer {
   gap: 100px;
   justify-content: space-evenly;
   padding: 20px;
-
+  position: relative;
+  margin-top: 5rem;
   border-top: 2px solid #eee;
 }
 
@@ -206,8 +207,9 @@ button {
 
 .about-us {
   max-width: 800px;
-  margin: 0 auto;
+  margin: 2rem auto;
   padding: 20px;
+
 }
 
 .about-us h2 {
@@ -221,4 +223,48 @@ button {
   line-height: 1.6;
   color: #666;
   margin-bottom: 16px;
+}
+
+.reservation-form {
+  display: grid;
+
+  width: 80%;
+  margin: 5rem auto;
+  gap: 20px;
+}
+
+.reservation-form label {
+  font-weight: bold;
+}
+
+.reservation-form input,
+.reservation-form select {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.reservation-form input[type='submit'] {
+  padding: 8px 16px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.reservation-form input[type='submit']:hover {
+  background-color: #45a049;
+}
+
+.reservation-form input[type='date'] {
+  width: 100%;
+}
+
+.reservation-form input[type='number'] {
+  width: 60px;
+}
+
+.reservation-form select {
+  width: 100%;
 }
