--- a/capstone/src/App.css
+++ b/capstone/src/App.css
@@ -295,3 +295,13 @@ input[type="submit"] {
 .disabled:hover {
   /* Additional styles when hovering over the disabled button, if needed */
 }
+
+h4 {
+  color: #F4CE14;
+  
+}
+
+h4:hover {
+  transform: scale(1.1);
+  cursor: pointer;
+}
